tests/error/array_incompatible.gw
// [contains] contains incompatible types
[NULL, 1];
